--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>title</title>
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="stylesheet/stylesheet.css">
 </head>
 <body>
 	<div class="navbar">
