--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width = device-width, initial-scale = 1">
 	<title>title</title>
 	<link rel="stylesheet" href="stylesheet/stylesheet.css">
 </head>
@@ -16,21 +17,21 @@
 	<div class="main">
 		<h1>Hello, world!</h1>
 		<p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		<div class="learnmore">Learn more &raquo</div>
+		<div class="learnmore learnmore-sm">Learn more &raquo</div>
 	</div>
 	<div class="container">
 		<!-- block記得要用彈性排版 -->
 		<!-- 這邊用了特別的換行打法，目的是要讓電腦覺得我的3個block之間沒有換行 -->
-		<div class="block">
+		<div class="block block-sm">
 			<h2>Heading</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore amet quasi ullam deserunt debitis molestias, fugit temporibus? Dolor, quaerat tempore voluptatem, aut explicabo sint inventore veritatis id iste et doloremque molestias nisi officiis placeat delectus quos rerum quas atque corrupti!</p>
 			<!-- &raquo是雙鍵號>>的代碼 -->
 			<div class="viewdtl">View details &raquo</div></div
-		><div class="block">
+		><div class="block block-sm">
 			<h2>Heading</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore amet quasi ullam deserunt debitis molestias, fugit temporibus? Dolor, quaerat tempore voluptatem, aut explicabo sint inventore veritatis id iste et doloremque molestias nisi officiis placeat delectus quos rerum quas atque corrupti!</p>
 			<div class="viewdtl">View details &raquo</div></div
-		><div class="block">
+		><div class="block block-sm">
 			<h2>Heading</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore amet quasi ullam deserunt debitis molestias, fugit temporibus? Dolor, quaerat tempore voluptatem, aut explicabo sint inventore veritatis id iste et doloremque molestias nisi officiis placeat delectus quos rerum quas atque corrupti!</p>
 			<div class="viewdtl">View details &raquo</div>
